testing clipping mask & boolean operations

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<div class="container">
 		<div class="images">
 			<img src="img/sample.png" id="sample">
+			<img src="img/sample2.png" id="sample2">
 		</div>
 	</div>
 
